tests/parsing/missing_array_size_expression/stderr.golden
error: unexpected ']', expected expression
bus.fbd +2:7
   |
 2 |   st []status
   |       ^
